--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.27.2",
     "eslint": "^8.22.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "prop-types": "^15.8.1"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
